--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="choose_a_city">CHOOSE A CITY</string>
     <string name="welcome">Welcome</string>
     <string name="details">DETAILS</string>
+    <string name="latitude">Latitude</string>
 </resources>
